<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SchoolmateHelpMe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_problem_show">ProblemShowActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">同学帮帮忙</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_username_hint">请输入登录账号(即学号)</string>
    <string name="login_password_hint">请输入登录密码</string>
    <string name="login_register_link">没有帐号？ <a href="#" mce_href="#">注册</a></string>
    <string name="login_update_link"><a href="#" mce_href="#">修改密码</a></string>
    <string name="title_activity_person">PersonActivity</string>
    <string name="title_activity_my_problem">MyProblemActivity</string>
    <string name="title_activity_publish_problem">PublishProblemActivity</string>
    <string name="title_activity_ranking_list">RankingListActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_update_password">UpdatePasswordActivity</string>
    <string name="title_activity_my_publish_problem_show">MyPublishProblemShowActivity</string>
    <string name="title_activity_my_solve_problem_show">MySolveProblemShowActivity</string>
    <string name="title_activity_other_people_information_show">OtherPeopleInformationShowActivity</string>
    <string name="title_activity_search">SearchActivity</string>

</resources>
